# bedrock

./: .gitignore  .mypy.ini  ATTRIBUTION.md  LICENSE  LICENSE.txt  README.md  RELEASE_NOTES_V0.2.md  electricity_sf6_plan.md  flowsa_ag_plan.md  plan_e_matrix_disaggregation.md  pyproject.toml  v0.3_release_notes.md
.claude/plan/: nipa_sut_nowcast.md
.claude/skills/dispatch-ef-diagnostics/: SKILL.md
.claude/skills/graphite-stacked-prs/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/plot-ef-diagnostics/: SKILL.md
.github/: pull_request_template.md
.github/actions/setup-python/: action.yml  test_integration.yml
.github/workflows/: a_matrix_analysis.yml  ci.yml  generate_diagnostics.yml  generate_snapshots.yml  run_a_matrix_analysis.yml  test_integration.yml
bedrock/analysis/: compare_scaled_x_to_0_3_default_x.py  compare_x_approaches.py
bedrock/analysis/a_matrix_bundle_effect/: visualize_bundle_effect_in_A.py
bedrock/analysis/a_matrix_time_series/: README.md  ViewVnormandPriceRatios.py  __init__.py  _loaders.py  _run_report.py  analysis.md  analysis_plan.md  compare_approaches.py  compare_key_sectors.py  compare_method_stability.py  compare_price_ratios.py  compare_summary_a_errors.py  compile_ef_diagnostics.py  constants.py  derive_A_cells_long.py  derive_A_cells_stability.py  derive_A_time_series.py  derive_useeio_nowcast_A.py  dispatch_ef_time_series.py  implement_useeio_nowcast_plan.md  key_sector_deep_dive.py  plot_ef_diagnostics.py  plot_v0_2_n_pct_hist.py  plot_v0_3_n_pct_hist.py  rebuild_run_index_from_drive.py  recover_ef_run_index.py  summary_a_and_q_errors.py  summary_a_errors.py  useeio_nowcast_ef_runbook.md  view_vnorm_and_price_ratios.py
bedrock/analysis/baseline_snapshot_comparison/: compare_B_Adom.py  compare_y.py  decompose_d_E_x.py  decompose_sector.py
bedrock/analysis/comp_make_use/: compare_make_use_by_stages.py
bedrock/analysis/electricity/: disaggregation_matrices.py  reallocation_matrices.py  verify_egrid_to_sector_vs_national.py  write_221100_disaggregation_matrices.py  write_221100_reallocation_matrices.py
bedrock/analysis/electricity_disagg_diagnostics/: README.md  __init__.py  analyze_n_variance.py  bly.py  decompose_d_n_step.py  dispersion.py  full_trace.py  import_local.py  local_data.py  manifest.py  manifest.yaml  net_change.py  paths.py  plot_ef.py  probe_221200.py  refresh_cache.py  run_all.py  vs_footing_frames.py  waterfall.py
bedrock/analysis/margins/: README.md  compare_margin_approaches.py  compare_margin_filters.py  compare_phi_to_reference.py  compare_sef_margins_sources.py  compare_sef_zenodo_useeio_code.py
bedrock/analysis/q/: compare_alt_q.py
bedrock/analysis/reconciling_data_years/: README.md  __init__.py  analysis.py  constants.py  equations_annex.md
bedrock/analysis/rho/: compare_rho_paths.py  export_useeior_cpi_rho.R  sector_divergence_detail.py
bedrock/analysis/time_series_B_matrix/: derive_B_time_series.py
bedrock/analysis/v0_3/: README.md  constants.py  dispatch_ef_release_v0_3.py  dispatch_ef_v03_waterfall.py  export_q_v0_3_cornerstone.py  plot_ef_release_v0_3.py  plot_ef_v0_v03_ceda_groups.py  plot_ef_v0_v03_useeio_groups.py
bedrock/ceda_usa/: README.md  __init__.py
bedrock/ceda_usa/utils/: ceda_sector_index.py  constants.py  gcp.py  ghg.py  inflate_to_target_year.py  inflation.py
bedrock/common/: README.md
bedrock/extract/: README.md  flowbyactivity.py  generateflowbyactivity.py
bedrock/extract/BEA/: BEA.py  BEA_Detail_GrossOutput_IO.yaml  BEA_PCE.py  BEA_Summary_Use_SUT.yaml
bedrock/extract/Census/: Census_CBP.py
bedrock/extract/EIA/: EIA_AEO.py  EIA_CBECS_Land.py  EIA_CBECS_Water.py  EIA_MECS.py
bedrock/extract/EPA/: EPA_CDDPath.py  EPA_GHGI.py  EPA_GHGI.yaml  EPA_SIT.py  EPA_WARMer.py  EPA_WFR.py
bedrock/extract/StateGHGI/: StateGHGI.py
bedrock/extract/USDA/: USDA_IWMS.py
bedrock/extract/__tests__/: conftest.py  test_fba.py
bedrock/extract/allocation/: bea.py  eia.py  epa.py  epa_constants.py  mecs.py  usda.py  utils.py
bedrock/extract/bea/: BEA.py  BEA_CEDA_foam_allocation.py  BEA_CEDA_foam_allocation.yaml  BEA_CEDA_refrigeration_allocation.py  BEA_CEDA_refrigeration_allocation.yaml  BEA_CEDA_transport_allocation.py  BEA_CEDA_transport_allocation.yaml  BEA_Detail_Make_AfterRedef.yaml  BEA_Detail_Use_AfterRedef.yaml  BEA_NIPA.py  BEA_PCE.py  BEA_PCEBridge.yaml  BEA_PCE_CEDA.yaml  BEA_PEQBridge.yaml  BEA_Summary_Supply.yaml
bedrock/flowsa/: __init__.py  bibliography.py  common.py  dataclean.py  datavisualization.py  exceptions.py  flowby.py  flowbyactivity.py  flowbyclean.py  flowbyfunctions.py  flowbysector.py  flowsa_yaml.py  generateflowbyactivity.py  geo.py  literature_values.py  location.py  naics.py  schema.py  settings.py  validation.py
bedrock/pipeline/: README.md
bedrock/publish/: README.md  bibliography.py  cache_reset.py  emission_factor_table.py  model_objects.py  placeholders.py
bedrock/transform/: README.md  conftest.py  dataclean.py  flowby.py  flowbyclean.py  flowbyfunctions.py  flowbysector.py  literature_values.py
bedrock/utils/: gcp.py
ceda_usa/: README.md  __init__.py
ceda_usa/transform/: conftest.py
ceda_usa/utils/: ceda_sector_index.py  countries.py  disaggregation.py  formulas.py  gcp.py  gwp.py  handle_negatives.py  inflate_to_target_year.py  inflation.py  split_using_aggregated_weights.py
docs/: apply_inflation_to_V_pipeline.mmd
flowsa/: __init__.py  bibliography.py  dataclean.py  flowby.py  flowbyactivity.py  flowbyclean.py  flowbysector.py  literature_values.py  naics.py  settings.py  validation.py
flowsa/data/: unit_conversion.csv
flowsa/data_source_scripts/: BLS_QCEW.py  EPA_GHGI.py  USGS_NWIS_WU.py  stewiFBS.py
scripts/: build_model_manual_check.py  clear-ceda-input-data-cache  clear-extract-input-data-cache  combine_ef_diagnostics.py  combine_ef_diagnostics_sheets.py  extract_raw_data.py  google-login  install-deps  install-uv  writeNAICScrosswalk.py
scripts/ceda_fbs_registry_eval/: .gitignore  README.md  __init__.py  compare.py  overlap.py  run_batch_compare.py  run_overlap_report.py  run_single.py
(+1135 files in other folders)
