[project]
name = "bedrock"
version = "0.1.0"
description = "Core data pipeline for Cornerstone artifacts"
authors = [
    { name = "Cornerstone Sustainability Data Initiative", email = "team@cornerstonedata.org" },
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core data processing
    "pandas[excel]>=2.3.0,<3.0.0",
    "numpy>=2.2.6,<3.0.0",
    "pandera[io]>=0.26.0,<0.27.0",
    # EPA dependencies
    "fedelemflowlist @ git+https://github.com/FLCAC-admin/fedelemflowlist.git#egg=fedelemflowlist",
    "esupy @ git+https://github.com/USEPA/esupy.git#egg=esupy",
    "StEWI @ git+https://github.com/USEPA/standardizedinventories.git#egg=StEWI",
    # Configuration and validation
    "pydantic>=2.7.1,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    # Google Cloud Platform
    "google-auth>=2.17.0,<3.0.0",
    "google-cloud-storage>=2.12.0,<3.0.0",
    "google-api-python-client>=2.102.0,<3.0.0",
    # Utilities
    "tenacity>=8.2.3,<9.0.0",
    "tqdm>=4.66.2,<5.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pyarrow>=22.0.0",
    "pycountry>=24.6.1",
    "python-dotenv >= 1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "mypy>=1.11.2,<2.0.0",
    "pandas-stubs>=2.0.2.230605,<3.0.0",
    "types-pyyaml>=6.0.12.20240311,<7.0.0",
    "types-tqdm>=4.66.0.20240417,<5.0.0",
    "black>=24.0.0,<25.0.0",
    "ruff>=0.12.3",
    "ipython>=8.14.0,<9.0.0",
    "ipykernel>=6.23.3,<7.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "spyder-kernels>=3.1.0",
    "ipdb>=0.13.13,<0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bedrock"]

[tool.hatch.metadata]
allow-direct-references = true # required for github packages

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.ruff]
line-length = 88
lint.extend-select = [
    "I",       # isort - import sorting
    "PLC0415", # Checks for import statements outside of a module's top-level scope
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument
]

[tool.ruff.lint.isort]
known-first-party = ["bedrock"]

[tool.ruff.lint.per-file-ignores]
"**/__tests__/**/*.py" = ["ARG001", "ARG002"]
"**/test_*.py" = ["ARG001", "ARG002"]
"bedrock/extract/data_source_scripts/*" = ["ALL"] # temporary turn off for flowsa FBA files
"bedrock/publish/visualization/datavisualization.py" = ["ALL"] # temporary turn off

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -v -m 'not eeio_integration'"
markers = [
    "eeio_integration: integration tests for eeio model",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
log_cli_level = "INFO"